# offline-sqlite

./: .gitignore  .prettierrc  AGENTS.md  README.md  package.json  skills-lock.json  tsconfig.json  turbo.json
apps/licensing-admin-web/: README.md  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/server/: .env.example  package.json  tsconfig.json  tsdown.config.ts
apps/web/: .env.example  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/.cargo/: config.toml
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  state.rs
apps/web/src-tauri/src/commands/: health.rs  license.rs  mod.rs  trial.rs
apps/web/src-tauri/src/licensing/: activation.rs  anti_debug.rs  fingerprint.rs  mod.rs  storage.rs  trial.rs  types.rs  validation.rs
apps/web/src-tauri/src/server/: env.rs  filesystem.rs  mod.rs
docs/: APPOINTMENTS_PLAN.md  app-protection-and-licensing.md  licensing-cloudflare-deploy-checklist.md  licensing-guide.md  prd-dental-visits-v1.md
docs/execution-plan-dental-v1/: 00-index.md  01-contracts-and-rules.md  02-db-schema-and-migrations.md  03-api-routers-and-validation.md  04-feature-visit-types.md  05-feature-patients.md  06-shared-tooth-selection-module.md  07-feature-visits-create-edit-with-acts.md  08-feature-visits-list-filters-soft-delete.md  09-tests-polish-and-release-checklist.md
scripts/: deploy-licensing-cloudflare.sh  generate-keypair.ts  generate-license.ts
(+156 files in other folders)
